Navbar collapses sooner to prevent some overhang when adjusting window size. Cleaned up blog views.

--- a/CS481WebApp/Content/bootstrap.css
+++ b/CS481WebApp/Content/bootstrap.css
@@ -2026,8 +2026,8 @@ pre {
 .container-fluid {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .row {
